Show data in trace visualisation, bound duration, add fault injection, add Unit tests