@@ -16,6 +16,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class TracingService {
@@ -40,8 +41,9 @@ public class TracingService {
 
     public ResponseEntity<?> findAllSpans(String traceId) {
         List<TraceSpan> traceSpans = findTraceSpans(traceId);
-
-        return new ResponseEntity<>(traceSpans, HttpStatus.OK);
+        sortSpans(traceSpans);
+        String response = convertSpansToString(traceSpans);
+        return new ResponseEntity<>("<pre>" + response + "</pre>", HttpStatus.OK);
     }
 
     public ResponseEntity<?> generateTraceReport(String traceId) {
@@ -59,17 +61,21 @@ public class TracingService {
                 children.add(span);
                 parentIdToChildSpansMap.put(span.getParentId(), children);
             } else {
-                rootNode = new TraceTreeNode(span.getId(), span.getName(), span.getDuration());
+                rootNode = new TraceTreeNode(span.getId(), span.getName(), span.getTags().getIstioCanonicalService(), span.getDuration());
             }
         }
 
-        assert rootNode != null;
-        rootNode.populateTree(rootNode, parentIdToChildSpansMap);
+        if (rootNode != null) {
+            rootNode.populateTree(rootNode, parentIdToChildSpansMap);
 
-        String traceDiagram = TraceTreeTraversal.dfsTraversal(rootNode, 0);
+            TraceTreeTraversal treeTraversal = new TraceTreeTraversal(rootNode.getDuration());
+            String traceDiagram = treeTraversal.dfsTraversal(rootNode, 0);
 
-        logger.info("Trace Propagation Between Services\n {}", traceDiagram);
-        return new ResponseEntity<>("<pre>" + traceDiagram + "</pre>", HttpStatus.OK);
+            logger.info("Trace Propagation Between Services\n {}", traceDiagram);
+            return new ResponseEntity<>("<pre>" + traceDiagram + "</pre>", HttpStatus.OK);
+        } else {
+            return new ResponseEntity<>("Trace Not Found", HttpStatus.NOT_FOUND);
+        }
     }
 
     public ResponseEntity<?> generateCompleteTraceReport() {
@@ -77,19 +83,31 @@ public class TracingService {
         return new ResponseEntity<>(traceSpans, HttpStatus.OK);
     }
 
-    private List<TraceSpan> convertObjectToSpans(Object spans) {
+    public List<TraceSpan> convertObjectToSpans(Object spans) {
         ObjectMapper mapper = new ObjectMapper();
         return mapper.convertValue(spans, new TypeReference<>(){});
     }
 
-    private List<TraceSpan> findTraceSpans(String traceId) {
+    public List<TraceSpan> findTraceSpans(String traceId) {
         if (traceId != null) {
             return tracingRepository.findAll()
                     .stream()
                     .filter(traceSpan -> traceSpan.getTraceId().equals(traceId))
-                    .toList();
+                    .collect(Collectors.toList());
         } else {
             return tracingRepository.findAll();
+        }
+    }
+
+    public String convertSpansToString(List<TraceSpan> spans) {
+        return spans.stream()
+                .map(TraceSpan::toString)
+                .collect(Collectors.joining("\n"));
+    }
+
+    public void sortSpans(List<TraceSpan> spans) {
+        if (!spans.isEmpty()) {
+            spans.sort(Comparator.comparing(TraceSpan::getTimestamp));
         }
     }
 }
